--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Users &amp; Posts</string>
     <string name="post_of_user">Post of user: %s</string>
+    <string name="post_comments_label">Comments</string>
 </resources>
